<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.android.vietnamforindians.Listing_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundHome"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/phong_nha"
            android:background="@drawable/text_view_border"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="san-serif-medium"
            android:text="@string/phongNha"
            android:background="@drawable/text_view_border"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="none"
            android:fontFamily="san-serif-medium"
            android:paddingLeft="8dp"
            android:scrollHorizontally="false"
            android:text="@string/phongNhaIntro"
            android:textColor="@color/innerTextColor"
            android:textStyle="normal" />

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:textStyle="normal"
            android:fontFamily="san-serif-medium"
            android:ellipsize="none"
            android:textColor="@color/innerTextColor"
            android:scrollHorizontally="false"
            android:text="@string/phongNhaDescription"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nextAfterPhongNha"
        android:maxWidth="12dp"
        android:maxHeight="8dp"
        android:text="@string/nextButton"
        android:background="@color/borderColor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="beforePhongNha"
        android:maxWidth="12dp"
        android:maxHeight="8dp"
        android:text="@string/previousButton"
        android:background="@color/borderColor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>
